fixed modal layout on tablet and mobile

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,6 +4,10 @@
         padding: 40px;
         box-sizing: border-box;
 
+        @include sm {
+            height: 100%;
+        }
+
         @include lg{
             padding: 26px 16px;
             border-radius: 16px;
@@ -50,6 +54,10 @@
             }
         }
     }
+    .fencing-modal-head{
+        position: relative;
+        z-index: 3;
+    }
     .fencing-modal-header{
         display: flex;
         align-items: center;
@@ -67,6 +75,13 @@
         padding: 0;
         width: 100%;
         box-sizing: border-box;
+        position: relative;
+        z-index: 2;
+
+        @include sm {
+            height: 100%;
+            max-height: 96%;
+        }
 
         @include md {
             padding-right: 10px;
@@ -220,6 +235,11 @@
         top: 0;
     }
 
+    @include sm {
+        top: -17px;
+        right: -8px;
+    }
+
     &:hover{
         background-color: #fff;
     }
@@ -264,14 +284,15 @@
 
     .fc-color-options{
         padding: 0;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
         display: block;
 
-        @include min-lg{
+        @media ( min-width: 540px ){
             display: flex;
         }
 
         p strong {
+            font-size: 16px;
             @include md {
                 font-size: 14px;
             }
@@ -279,6 +300,13 @@
 
         .fc-col{
             @include min-lg{ 
+                width: 26.6111111111%;
+                margin-right: 2.2222222222%;
+            }
+        }
+
+        .fc-col-3 {
+            @media (min-width: 600px) and ( max-width: 992px ){
                 width: 26.6111111111%;
                 margin-right: 2.2222222222%;
             }
@@ -294,6 +322,9 @@
                 width: 20px;
                 height: 20px;
                 top: 18px;
+                @media (min-width: 600px) and ( max-width: 992px ){
+                    top: 14px;
+                }
             }
         }
     }
@@ -327,5 +358,61 @@
 
     .fencing-modal-md{
         max-width: 840px;
+    }
+
+    .fc-form-plan h2{
+        font-size: 28px;
+
+        @include lg{
+            text-align: left;
+        }
+    }
+
+    .fc-form-check.fc-mb-3{
+        margin-bottom: 5px !important;
+    }
+
+    .fc-modal-frame{
+        @include sm {
+            height: 100%;
+            padding-bottom: 30px;
+            box-sizing: border-box;
+        }
+    }
+
+    .fc-form-check-img {
+
+        p{
+            font-size: 14px;
+
+            @include sm {
+                font-size: 13px;
+            }
+        }
+
+        .fc-form-check{
+            @include sm {
+                display: block;
+                height: 100px;
+                position: relative;
+                overflow: hidden;
+            }
+        }
+        
+        .fc-rounded{
+            @include sm {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+        }
+
+        .fc-empty-img{
+            @include sm {
+                height: 100%;
+            }
+        }
+
     }
 }
